[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/UI/in_game_menu/settingsSize64.png" type="Texture" id=1]
[ext_resource path="res://src/UI/in_game_menu/Buttopns/RestartButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/UI/in_game_menu/Buttopns/QuitButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/UI/in_game_menu/Menu.gd" type="Script" id=4]

[node name="Menu" type="VBoxContainer"]
margin_left = 1384.03
margin_top = 54.2876
margin_right = 1744.03
margin_bottom = 408.288
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Settings" type="TextureButton" parent="."]
margin_right = 360.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 50 )
texture_normal = ExtResource( 1 )
expand = true
stretch_mode = 3

[node name="CenterRow" type="HBoxContainer" parent="."]
margin_top = 54.0
margin_right = 360.0
margin_bottom = 354.0
rect_min_size = Vector2( 360, 300 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Buttons" type="VBoxContainer" parent="CenterRow"]
margin_right = 360.0
margin_bottom = 300.0
rect_min_size = Vector2( 360, 300 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="RestartButton" parent="CenterRow/Buttons" instance=ExtResource( 2 )]
pause_mode = 2
visible = false
margin_top = 0.0
margin_right = 360.0
margin_bottom = 300.0
rect_min_size = Vector2( 360, 70 )
flat = true

[node name="QuitButton" parent="CenterRow/Buttons" instance=ExtResource( 3 )]
pause_mode = 2
visible = false
margin_top = 152.0
margin_right = 360.0
margin_bottom = 300.0
rect_min_size = Vector2( 360, 70 )
flat = true
[connection signal="pressed" from="Settings" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="CenterRow/Buttons/RestartButton" to="." method="_on_RestartButton_pressed"]
[connection signal="pressed" from="CenterRow/Buttons/QuitButton" to="." method="_on_QuitButton_pressed"]
